<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/share1"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/rate"
        android:icon="@drawable/rate"
        android:title="@string/rate_this_app"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/more"
        android:title="@string/more_apps"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText" />


    <item
    android:id="@+id/privacy"
    android:icon="@drawable/policy_icon"
    android:orderInCategory="100"
    android:title="@string/privacy_policy"
    app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="Exit"
        app:showAsAction="ifRoom|withText" />

</menu>